PID Regler überarbeitet (Formeln ergänzt, Bilder hinzugefügt)

--- a/RegT2.tex
+++ b/RegT2.tex
@@ -30,6 +30,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input{sections/GegenkopplungStabilitaet}
+\newpage
 \input{sections/PidRegler}
 \input{sections/Diverses}
 \input{sections/BodeApproximation}	
