Gegenkopplung überarbeitet und erweitert

--- a/tikz/IGliedBode.tex
+++ b/tikz/IGliedBode.tex
@@ -13,6 +13,9 @@
 
 	%% Amplitudengang
 	\draw[blue, very thick] (0,0.3) -- +(3.3,-1.55) node[near end, below, rotate=-18, black] {$-20\frac{dB}{DK}$};
+	\draw(1.49,-0.4) node[draw,circle,inner sep=2pt,fill, blue] {};
+	\node at (1.49, -0.4) [anchor = north east, blue] {$\omega = K$};
+	
 \end{scope}
 
 
