--- a/sections/GegenkopplungStabilitaet.tex
+++ b/sections/GegenkopplungStabilitaet.tex
@@ -1,5 +1,5 @@
 \section{Gegenkopplung und Stabilität \formelbuch{107}}
-	\subsection{LTI-Grundglieder}	
+	\subsection{LTI-Grundglieder \formelbuch{124 \& 379}}	
 		\begin{longtable}{|c|c|l|}
         	\specialrule{2pt}{0pt}{0pt}
         	{\bf Typ} & {\it Symbol} & {\it Gleichung, Dgl}\\
@@ -15,7 +15,7 @@
 			\begin{tabular}{lll}
 				$y = Ku$ 		& 							& \\
 				$u=1(t)$ 		& $y=K 1(t)$ 				& \\
-				$G(j \omega)=K$	& $\left| G \right| = K$	& $argG=0$ \\
+				$G(j \omega)=K$	& $\left| G \right| = K$	& $arg(G)=0$ \\
 			\end{tabular} 
 			\\ \cline{2-3}
 			& \parbox[c][2cm]{3cm}{\input{./tikz/PGliedStruktur}}
@@ -30,7 +30,8 @@
 			I & \parbox[c][2cm]{3cm}{\input{./tikz/IGlied}}
 			&
 			\begin{tabular}{lll}
-				$\dot{y} = Ku$ 					& 										& \\
+				$\dot{y} = Ku$ 					
+				& \multicolumn{2}{l}{$y = K \int\limits_{0}^{t}u(\tau)\;d\tau \qquad y(0) = 0 \qquad [K] = sec^{-1}$}										\\
 				$u=1(t)$ 						& $y=K t$ 								& \\
 				$G(j \omega)=\frac{K}{j\omega}$ & $\left| G \right| = \frac{K}{\omega}$ & $argG=-\frac{\pi}{2}$ \\
 			\end{tabular}
@@ -47,7 +48,8 @@
 			D & \parbox[c][2cm]{3cm}{\input{./tikz/DGlied}}
 			&
 			\begin{tabular}{lll}
-				$y = K\dot{u}$					&										& \\
+				$y = K\dot{u}$					
+				&	$[K] =sec$					& \\
 				$u=1(t)$						& $y=K \delta (t)$						& \\
 				$G(j \omega)=K j\omega$			& $\left| G \right| = K\omega$			& $argG=\frac{\pi}{2}$
 			\end{tabular}
@@ -59,6 +61,9 @@
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
 			
+			\newpage
+			
+			\specialrule{2pt}{0pt}{0pt}
 			
 			%PT1_Glied
 			$PT_1$ & \parbox[c][2cm]{3cm}{\input{./tikz/PT1Glied}}
@@ -91,17 +96,18 @@
 	        		$y=K \left[1-\frac{1}{\sqrt{1-\zeta^2}}e^{-\zeta\omega_n t}\sin
                		\left( \sqrt{1-\zeta^2} \omega_n t+arcos(\zeta) \right)\right]$
                	} \\
-               	$G(j \omega)= \frac{K}{(j \omega T)^2 + 2 \zeta T (j\omega) + 1}$ & $\left| G \right| = \frac{K}{\sqrt{\left[1+(j\omega
+               	$G(j \omega)= \frac{K}{1+ 2 \zeta (j\omega) T  + (j \omega T)^2 + }$ & $\left| G \right| = \frac{K}{\sqrt{\left[1+(j\omega
                	T)^2\right]^2+\left[2\zeta \omega T \right]^2}}$ & \\
-               	$\arg G=-\arctan  \frac{2\zeta \omega T}{(j\omega T)^2+1}$ & $0 \leq\omega T \leq 1$ & \\
-               	$\arg G=\arctan \frac{2\zeta \omega T}{(j \omega T)^2+1}-\pi$ & $1 \leq\omega T \leq \infty$ & \\
+               	$\arg G=-\arctan  \frac{2\zeta \omega T}{1+(j\omega T)^2}$ & $0 \leq\omega T \leq 1$ & \\
+               	$\arg G=\arctan \frac{2\zeta \omega T}{1+(j \omega T)^2}-\pi$ & $1 \leq\omega T \leq \infty$ & \\
 	        	
 	        \end{tabular}
 			\\ \cline{2-3}
+			& \parbox[c][2cm]{3cm}{\input{./tikz/PT2GliedStruktur}}
 			& \begin{minipage}{3cm}
 	        \includegraphics[angle = {-0.3}, width=3cm]{./images/PT2_Nyq.jpg}
 	        \end{minipage}
-			& \begin{minipage}{12cm}
+			\begin{minipage}{9cm}
 	        \includegraphics[angle = {0.2}, width=8cm]{./images/PT2_Bode.jpg}
 	        \end{minipage} \rule[-5mm]{0mm}{35mm}
 	        \\
@@ -127,6 +133,15 @@
 			\parbox[c]{6cm}{\input{./tikz/TtGliedBode}}
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
+		
+		%DT1_Glied
+			$DT_1$ &
+	        \parbox[c][2cm]{3cm}{\input{./tikz/DT1GliedStruktur}}
+	        &
+	        \begin{tabular}{lll}
+	        	$G(j \omega)= G_D \cdot G_{PT_1} = j\omega T_V \dfrac{1}{1+j\omega T_C} = \dfrac{T_V}{T_C}\left(1- \dfrac{1}{1+ j\omega T_C} \right)$ \\
+	        \end{tabular}\\
+	        \specialrule{2pt}{0pt}{0pt}
         \end{longtable}
 
 %----------------------------------------------------------------------------------------
@@ -185,44 +200,75 @@
 
 %----------------------------------------------------------------------------------------
 
-
+	\newpage
 
 	\subsection{Stabilitätsproblem \formelbuch{108}}
-		\begin{minipage}{5cm}
-		\fbox{$K_I T_t=\frac{\pi}{2}$} \\
-		\fbox{$K_I=\omega_\pi$}
-		\end{minipage}
-		\begin{minipage}{13cm}
-        $K_I$: Stabilitätsgrenze \\
-        $\omega_\pi$: Phasenschnittfrequenz
-        \end{minipage}
-
+	\begin{multicols}{2}	
+        
+        \textbf{P-Glied mit Totzeit gegengekoppelt \formelbuch{109}}\\
+        	$\bullet \; K_P < 1$: stabil\\
+        	$\bullet \; K_P = 1$: grenzstabil\\
+        	$\bullet \; K_P > 1$: instabil mit $\omega_{\pi} = \frac{2\pi}{T_t}$\\
+        	$\omega_\pi$: Phasenschnittfrequenz
+        	
+       	\columnbreak
+        	
+		\textbf{I-Glied mit Totzeit gegengekoppelt \formelbuch{111}}\\
+			Grenzkurve: \fbox{$K_I T_t=\frac{\pi}{2}$}, wobei \fbox{$\omega_\pi = K_I$}\\
+        
+        \textbf{Zwei I-Glieder gegengekoppelt \formelbuch{115}}\\
+        	\fbox{$\omega_\pi = \sqrt{K}$}
+	\end{multicols}
+	Zur Instabilität führt das Zusammenwirken von Verstärkung und Signalverzögerung. Dabei ist die Reihenfolge der Glieder beliebig. Entscheiden sind gesamte Verstärkung $=$ Kreisverstärkung und gesamte Verzögerung $=$ Kreisverzögerung im offenen Regelkreis.
 
 	\subsection{Nyquistkriterium \formelbuch{129}}
-		Der geschlossene Regelkreis ist genau dann stabil, wenn beim Durchlauf der
-		Ortskurve in Richtung zunehmender Frequenz der kritische Punkt -1 \glqq zur
-		Linken\grqq\ liegt.
+		\begin{minipage}{8cm}
+			\includegraphics[width = 7.5cm]{./images/Nyquistkurve}
+		\end{minipage}
+		\begin{minipage}{10cm}
+			Der geschlossene Regelkreis ist genau dann stabil, wenn beim Durchlauf der
+			Ortskurve des offenen Regelkreise $G_o$ in Richtung zunehmender Frequenz der kritische Punkt -1 \glqq zur Linken\grqq\ liegt, daher nicht umschlungen wird. \\ \\ 
+			Dies ist eine vereinfachte Form des Nyquist-Kriterium und setzt einen stabilen offenen Kreis voraus (Prozess mit Ausgleich), der auch noch durch ein I-Glied ergänzt sein darf (Prozess ohne Ausgleich).
+		\end{minipage}
+		 
 		
 	\subsection{Phasenreserve und Verstärkungsreserve \formelbuch{132}}
 		\begin{tabular}{l|ll}
 			$K_RK_{Rres}=K_{R\pi}$ & $K_R$ & Reglerverstärkung ($K_R < K_{R\pi} \rightarrow$ Regelung stabil, $K_R > K_{R\pi} \rightarrow$ Regelung
 			instabil	) \\
-			$K_{Rres}=\frac{1}{\left| G(j\omega_{\pi})\right|}$ & $K_{Rres}$ & 	Verstärkungsreserve mit Regler (Amplitudenres., gain margin) \\
-			$argG_0=-\pi+\Phi_{res}$ & $K_{R\pi}$ & kritische Verstärkung (Verstärkung ohne	Regler) \\
-			$argG_0(\omega_\pi)=-\pi$ & $\omega_\pi$ & Phasenschnittfrequenz\\
-			$|G_0(j\omega_D)|=1$ & $\omega_D$ & Durchtrittsfrequenz \\
-			& $\Phi_{res}$ & Phasenreserve
+			$K_{Rres}=\frac{1}{\left| G_o(j\omega_{\pi})\right|}$ & $K_{Rres}$ & 	Verstärkungsreserve mit Regler (Amplitudenres., gain margin) $\geq 4$ (praktisch) \\
+			$K_{R\pi} = K_R \cdot \frac{1}{|G_o(j\omega_\pi)|}$ & $K_{R\pi}$ & kritische Verstärkung (Verstärkung ohne Regler) \\
+			$argG_0(\omega_D)=-\pi+\Phi_{res}$ & $\omega_\pi$ & Phasenschnittfrequenz\\
+			$|G_o(j\omega_D)|=1$ & $\omega_D$ & Durchtrittsfrequenz \\
+			$argG_o(\omega_\pi)=-\pi$ & $\Phi_{res}$ & Phasenreserve (phase margin) $\Rightarrow 45^{\circ} \leq \Phi_{res} \leq 70^{\circ}$
 		\end{tabular}
-		
-        \includegraphics[width=6.2cm]{./images/phasenreserve.png}
+		\begin{minipage}{7cm}
+			\includegraphics[width=6.5cm]{./images/phasenreserve.png}
+		\end{minipage}
+		\begin{minipage}{11cm}
+			\subsubsection{Vorgehen beim Einstellen von P-Regler \formelbuch{133}}
+			\textbf{Geg:} $\Phi_{res}$
+			\begin{enumerate}
+				\item Mit $\Phi_{res}$ und $argG_o(\omega_D) \rightarrow$ Durchtrittsfrequenz bestimmen.
+				\item Mit $G_o(j\omega_D) = 1 \rightarrow$  Nach $K_{R}$ auflösen 
+			\end{enumerate}
+			\vspace{0.5cm}
+			\textbf{Geg:} $K_{Rres}$
+			\begin{itemize}
+				\item $K_R = \dfrac{1}{K_{Rres} \cdot |G(j\omega_\pi)|}$, wobei bei $|G(j\omega_\pi)| \rightarrow K_R = 1$ gewählt.
+			\end{itemize}
+			
+		\end{minipage}
+        
 			
 	\subsection{Sprungantwort und Stabilität \formelbuch{135}}
-		\subsubsection{Stabilitätssatz für ein System 2. Ordnung \formelbuch{137}}
-			Ein System ist genau dann stabil, wenn {\bf alle} Koeffizienten der
-			homogenen Dgl. positiv (oder alle negativ) und ungleich 0 sind.\\
+		\subsubsection{Stabilitätssatz für ein geschlossenes System 2. Ordnung \formelbuch{137}}
+			Ein System 2. Ordnung ist genau dann stabil, wenn {\bf alle} Koeffizienten der
+			homogenen Dgl. positiv und ungleich 0 sind.\\
 			$\ddot{y}+a_1\dot{y}+a_0y=F(u)$ \\
 			Für $a_0 = 0$ und $a_1 > 0$ enthält der Prozess ein reines I-Glied und
-			ist somit ein Prozess ohne Ausgleich. (DC-Verstärkung = $\infty$)
+			ist somit ein Prozess ohne Ausgleich.  \\ \\
+			Bei LTI-Systemen höherer Ordnung genügt dieser Satz nicht. Er ist dabei notwendig, daher müssen alle Koeffizienten vorhanden und positiv sein. Jedoch ist dies nicht hinreichend!
 			
 		\subsubsection{Stabilitätssatz für die Sprungantwort}
 			Ein LTI-System ist genau dann stabil, wenn die Sprungantwort einem
