--- a/tikz/DGlied.tex
+++ b/tikz/DGlied.tex
@@ -12,7 +12,7 @@
     \draw[->, thick] (-0.2,0) -- +(1.3,0);
     \draw[->, thick] (0,-0.1) -- +(0,1);
 
-    %\draw[blue, very thick] (-0.2,0) -- ++(0.2,0) -- +(1,0.7);
+    \draw[blue, very thick] (0,0.7) -- ++(0,-0.7) -- +(0.9,0);
   \end{scope}
 
 \end{tikzpicture}
