--- a/tikz/DGliedBode.tex
+++ b/tikz/DGliedBode.tex
@@ -13,6 +13,8 @@
 
 	%% Amplitudengang
 	\draw[blue, very thick] (0,-1.1) -- +(3.3,1.55) node[midway, below, rotate=18, black] {$20\frac{dB}{DK}$};
+	\draw(2.55,0.1) node[draw,circle,inner sep=2pt,fill, blue] {};
+	\node at (2.55, 0.1) [anchor = south east, blue] {$\omega = \frac{1}{K}$};
 \end{scope}
 
 
