--- a/tikz/PT1GliedBode.tex
+++ b/tikz/PT1GliedBode.tex
@@ -15,8 +15,10 @@
 
 	%% Amplitudengang
 	\draw[blue, very thick] (0,0.1) .. controls (1.3,0.1) .. (3.5,-0.8) 
-			node[very near end, below, rotate=-14, color=black] {$20 \frac{db}{DK}$};
+	node[very near end, below, rotate=-14, color=black] {$-20 \frac{db}{DK}$};
 	\draw (1.3,0.1) -- (3.5, -0.8);
+	\draw(1.3,0.1) node[draw,circle,inner sep=1pt,fill] {};
+	\node at (1.3, 0.1) [anchor = south west] {$\omega = \frac{1}{T}$};
 \end{scope}
 
 
@@ -35,8 +37,8 @@
 	%%%%%%%%%%%%%%%%
 
 	%% Amplitudengang
-	\draw[blue, very thick] (0,0.2) .. controls (2.2,0.2) and (0.8,-0.3) .. (3,-0.3) -- +(0.5,0);
-	\draw (0.5,0.2) -- (2.5,-0.3);
+	\draw[blue, very thick] (0,0.2) .. controls (2.0,0.2) and (0.6,-0.3) .. (2.6,-0.3) -- +(0.9,0);
+	\draw (0.3,0.2) -- (2.3,-0.3);
 	
 \end{scope}
 
