--- a/tikz/PT2Glied.tex
+++ b/tikz/PT2Glied.tex
@@ -6,17 +6,18 @@
   \end{scope}
 
   \node at (0.7,0.9) {K};
-  \node at (1.8,0.9) {D,$\omega_0$};
+  \node at (1.25,0.9) {$\zeta$};
+  \node at (1.8,0.9) {T};
 
   % Inhalt
   \begin{scope}[shift={(0.8,-0.4)}]
     \draw[->, thick] (-0.2,0) -- +(1.3,0);
     \draw[->, thick] (0,-0.1) -- +(0,1);
 
-    \draw[blue, very thick] (-0.2,0) -- ++(0.2,0)
-              .. controls (0.15,1.6)  and (0.35,-0.1) .. (0.50,0.6)
-              .. controls (0.60,0.8)  and (0.7,0.4) .. (0.8,0.6)
-              .. controls (0.85,0.65) and (0.88,0.61) .. (0.9,0.6);
+	\draw[blue, very thick] (-0.2,0) -- ++(0.2,0)
+              .. controls (0.15,0) .. (0.2,0.5)
+              .. controls (0.3,1.6)  and (0.5,-0.1) .. (0.65,0.7)
+              .. controls (0.75,1.1)  and (0.85,0.5) .. (0.95,0.6)
+              ;
   \end{scope}
-
 \end{tikzpicture}
