--- a/tikz/TtGlied.tex
+++ b/tikz/TtGlied.tex
@@ -5,8 +5,7 @@
     \draw[->] (2,0) -- +(0.5,0) node[near end, above] {y};
   \end{scope}
 
-  \node at (0.7,0.9) {K};
-  \node at (1.8,0.9) {D,$\omega_0$};
+  \node at (1.8,0.9) {$T_t$};
 
   % Inhalt
   \begin{scope}[shift={(0.8,-0.4)}]
