--- a/tikz/TtGliedStruktur.tex
+++ b/tikz/TtGliedStruktur.tex
@@ -6,7 +6,7 @@
   \end{scope}
 
 % Zugemüse
-\node at (0.7,0.9) {K};
-\node at (1.8,0.9) {D,$\omega_0$};
+\node at (1.8,0.9) {$T_t$};
+
 \draw[very thick] (0.9,-0.6) -- ++(0,1) -- +(1.1,0);
 \end{tikzpicture}
