Einige Ergänzungen bei PT2, Sprungantwort hinzugefügt, \raggedbottom um unnötigen whitespace zu vermeiden

--- a/RegT2.tex
+++ b/RegT2.tex
@@ -23,6 +23,7 @@
 \usepackage{enumitem}
 \setlist{noitemsep,topsep=1pt,parsep=1pt,partopsep=1pt}
 
+\raggedbottom
 % Möglichst keine Ergänzungen hier, sondern in header.tex
 \begin{document} 
  
