--- a/sections/PidRegler.tex
+++ b/sections/PidRegler.tex
@@ -53,7 +53,7 @@
         $\varepsilon =  \dfrac{\Delta y}{y_{\infty}}$ & &
         $\Delta y$: & Toleranzbereich der Amplitude im eingeschwungenen Zustand \\
       \cline{1-1}
-      	$\delta = \ln{\Bigg(\frac{y_i}{y_{i+1}}\Bigg)} = \frac{2\pi \zeta}{\sqrt{1-\zeta^2}}$ & &
+      	$\delta = \ln{\Big(\frac{y_i}{y_{i+1}}\Big)} = \frac{2\pi \zeta}{\sqrt{1-\zeta^2}}$ & &
         $\delta$: & Logarithmisches Dekrement\\
       \cline{1-1}  
     \end{tabular}
