--- a/sections/PidRegler.tex
+++ b/sections/PidRegler.tex
@@ -23,7 +23,7 @@
     \begin{tabular}{|m{7cm}|m{1cm}m{0.5cm}m{8cm}}
       \cline{1-1}
       $y_{\infty} =A \cdot K$ & &
-      $y_{\infty}$: & Grenzwert\\
+      $y_{\infty}$: & Endwert\\
       \cline{1-1}  
         $T_\omega = 2T_m=\dfrac{2\pi}{\omega_n \sqrt{1-\zeta^2}}=\dfrac{2\pi}{\omega}$ & &
         $T_{\omega}$: & Schwingungsdauer \\
