Anschwingzeit noch hinzugefügt

--- a/sections/PidRegler.tex
+++ b/sections/PidRegler.tex
@@ -47,6 +47,9 @@
         $\omega_n = \dfrac{1}{T}$ & &
         $\omega_n$: & Kennkreisfrequenz \\
       \cline{1-1}  
+        $T_a = \frac{\pi - \arccos{(\zeta)}}{\omega_n\cdot\sqrt{1-\zeta^2}}$ & &
+        $T_a$: & Anschwingzeit/Anregelzeit \\
+      \cline{1-1}  
         $\sigma = -\dfrac{\zeta}{T} = -\zeta\omega_n$ & &
         $\zeta$: & Dämpfungskonstante \\
       \cline{1-1}  
@@ -60,7 +63,7 @@
     \renewcommand{\arraystretch}{1}
 	
 	\subsubsection{Sprungantwort}
-	\includegraphics[scale=0.8]{./images/pt2StepResp.pdf}
+	\includegraphics[width = 10cm, height = 4.5cm]{./images/pt2StepResp.pdf}
 	
 	\subsubsection{Dämpfung}
 	Optimal bei $\Psi=45$ und $\zeta=\frac{1}{\sqrt{2}}$.
