Vorgehen beim Einstellen von P-Regler ergänzt

--- a/sections/GegenkopplungStabilitaet.tex
+++ b/sections/GegenkopplungStabilitaet.tex
@@ -249,7 +249,7 @@
 			\subsubsection{Vorgehen beim Einstellen von P-Regler \formelbuch{133}}
 			\textbf{Geg:} $\Phi_{res}$
 			\begin{enumerate}
-				\item Mit $\Phi_{res}$ und $argG_o(\omega_D) \rightarrow$ Durchtrittsfrequenz bestimmen.
+				\item Mit $argG_o(\omega_D) = -\pi + \Phi_{res} \rightarrow$ Durchtrittsfrequenz bestimmen.
 				\item Mit $G_o(j\omega_D) = 1 \rightarrow$  Nach $K_{R}$ auflösen 
 			\end{enumerate}
 			\vspace{0.5cm}
