--- a/sections/BodeApproximation.tex
+++ b/sections/BodeApproximation.tex
@@ -95,7 +95,7 @@
 			$\omega < \omega_p$: 	& Konstant $-40 \log \omega_p$ \\
 			$\omega > \omega_p$:	& $-40dB/Dek.$ \\
 			Überhöhung: 			& $\frac{\omega_p}{2}$ bis $2\omega_p$ \\
-			Maximum:				& $20 \log q_p$ bei $\omega = \omega_p$			
+			Maximum:				& $-40\log\omega_p + 20 \log q_p$ bei $\omega = \omega_p$			
 		\end{tabular} &
 		\parbox[c][1cm]{1cm}{\includegraphics[width=1cm]{./images/bode-approx-phase-6.png}} &
 		\begin{tabular}{ll}
@@ -112,7 +112,7 @@
 			$\omega < \omega_p$:	& Konstant $0dB$ \\
 			$\omega > \omega_p$:	& $-40dB/Dek.$ \\
 			Überhöhung:				& $\frac{\omega_p}{2}$ bis $2 \omega_p$ \\
-			Maximum:				& $-40\log\omega_p + 20 \log q_p$ bei $\omega = \omega_p$
+			Maximum:				& $20 \log q_p$ bei $\omega = \omega_p$
 		\end{tabular} &
 		\parbox[c][1cm]{1cm}{\includegraphics[width=1cm]{./images/bode-approx-phase-6.png}}	& 
 		\begin{tabular}{ll}
@@ -121,7 +121,8 @@
 			$\omega = \omega_p$:								& $-\frac{\pi}{2}$
 		\end{tabular}
 	\\ \hline	
-		Konjugiert-komplexe Nullstellen &
+		Konjugiert-komplexe Nullstellen
+    für $|q_z| > 1/2$&
 		$s^2+s\frac{\omega_z}{q_z}+\omega_z^2$ &
 		\multicolumn{4}{l|}{
 			Analog zu den Konjugiert-komplexen Polen jedoch gespiegelt an der $0dB$- / $0$-Grad-Linie.
@@ -133,7 +134,7 @@
 	\\ \hline
 		\multicolumn{6}{|p{21cm}|}{
 			Serieschaltung von Systemen erfolgt durch \textbf{Superposition} der einzelnen Bode-Diagramme 
-			(Multiplikation von UTFs entspricht Addition im	dB-Bereich). $\alpha \in \mathbf{R}$. 
+			(Multiplikation von UTFs entspricht Addition im	dB-Bereich). $\alpha , \beta \in \mathbf{R}$. 
       Für $\omega_p$ und $q_p$ siehe Kapitel\ref{Polfrequenz Polguete}
 		}
 	\\ \hline
