--- a/sections/PidRegler.tex
+++ b/sections/PidRegler.tex
@@ -19,7 +19,7 @@
 
 	\subsection{PT$_2$-Glied \formelbuch{163}}
 	\subsubsection{Parameter der Sprungantwort}
-    \renewcommand{\arraystretch}{2}
+    \renewcommand{\arraystretch}{1.8}
     \begin{tabular}{|m{7cm}|m{1cm}m{0.5cm}m{8cm}}
       \cline{1-1}
       $y_{\infty} =A \cdot K$ & &
@@ -62,22 +62,25 @@
     \end{tabular}
     \renewcommand{\arraystretch}{1}
 	
+  \begin{multicols}{2}
 	\subsubsection{Sprungantwort}
-	\includegraphics[width = 10cm, height = 4.5cm]{./images/pt2StepResp.pdf}
+	\includegraphics[width = 9cm]{./images/pt2StepResp}
 	
 	\subsubsection{Dämpfung}
-	Optimal bei $\Psi=45$ und $\zeta=\frac{1}{\sqrt{2}}$.
+	Optimal bei $\zeta=\frac{1}{\sqrt{2}}$ ($\Psi=45$).
 	Dabei erreicht die Regelgrösse $y$ nach $4.3\%$ Überschwingen rasch den	Endwert.
 		
     \subsubsection{Berechnung $\zeta$}
-      Aus DGL $\ddot{y}+a_1\dot{y}+a_0 y=\ldots$ folgt $a_1=2\zeta\omega_n$, 
-      $a_0=\omega_n^2$ $\Rightarrow \zeta=\frac{a_1}{2\sqrt{a_0}}$ \\
-      Mittels Überschwingweite kann $\zeta$ ebenfalls berechnet werden\\
-      \begin{tabular}{p{3cm}p{3cm}p{6cm}}
+     \textbf{Aus DGL} $\ddot{y}+a_1\dot{y}+a_0 y=\ldots$ folgt $a_1=2\zeta\omega_n$, 
+      $a_0=\omega_n^2$
+      $\Rightarrow \zeta=\frac{a_1}{2\sqrt{a_0}}$ \\
+      \textbf{Mittels Überschwingweite} kann $\zeta$ ebenfalls berechnet werden\\
+      \begin{tabular}{p{2.5cm}p{2.5cm}p{4cm}}
         $\zeta = \frac{1}{\sqrt{1+(\frac{\pi}{c})^2}}$ & $c =ln(\frac{y_m}{y_{\infty}})$ & $y_m$: Überschwingweite
       \end{tabular}
 
 		Weitere Formeln in der LTI-Grundglieder Tabelle
+  \end{multicols}
 
 	\subsection{PI-Regler \formelbuch{174}}
     \begin{tabular}{m{10cm}m{8cm}}
