--- a/sections/PidRegler.tex
+++ b/sections/PidRegler.tex
@@ -133,12 +133,22 @@
  
 
 	\subsection{PID-Regler \formelbuch{183/383}}
-    \begin{tabular}{m{10cm}m{8cm}}
-      \includegraphics[width=10cm]{./images/PID_Regler.png} &
+    \begin{tabular}{m{9cm}|m{10cm}}
+      \textbf{additive Form}(Parallelschaltung) & multiplikative Form (Serienschaltung) \\
+      \includegraphics[width=9cm]{./images/PID_Regler_add} &
+      \includegraphics[width = 7cm]{./images/PID_Regler_mul}
+      \\
       {
-        \fbox{$G_{PID}(s) = K_R \left(1 + \frac{1}{s T_N} + s T_V \right)$}
-        \fbox{$G_{PIDT_1}(s) = K_R \left(1 + \frac{1}{s T_N} + \frac{s T_V}{1+s T_C} \right)$}
+        \fbox{$G_{PIDT_1}(s) = K_R \left(1 + \frac{1}{s T_N} + \frac{s T_V}{1+s T_C} \right)$} \newline
+        $e(t) = 1(t) \rightarrow u(t) = K_R \left( 1 + \frac{t}{T_N} + \frac{T_V}{T_C}e^{-\frac{t}{T_C}}\right)$
+      } & 
+      {
+        \fbox{$G_{PIDT_1}(s) = K_R \frac{1+sT_N}{s T_N} \frac{1 + s(T_V + T_C)}{1+s T_C}$} \newline
+        $e(t) = 1(t) \rightarrow u(t) = K_R \left[ 1 + \frac{T_V}{T_N} +\frac{t}{T_N} + \left( \frac{T_V}{T_C}-\frac{T_V}{T_B}\right)e^{-\frac{t}{T_C}}\right]$
       }
+      \\
+      \multicolumn{2}{c}{Praktisch ist: $T_N \leq T_V > T_C$}
+      \\
     \end{tabular}
 		
 
