Diverses leicht optimiert: System Parallel kompakter, Umformungen direkt im Diverses Teil

--- a/sections/Diverses.tex
+++ b/sections/Diverses.tex
@@ -14,9 +14,9 @@
   \end{multicols}    	
     
 \subsection{Zeigerdiagramme}
-  Soll zu einem Gegebenen Blockschaldbild (oder einer gegebenen Funktion) das Zeigerdiagramm erstellt 
-  werden werden die \textbf{Beträge} der Elemente \textbf{multipliziert},
-  die \textbf{Winkel} ($arg()$) \textbf{addiert}. Die Werte für die einzelnen Elemente sind der Tabelle in 1. LTI-  
+  Soll zu einem gegebenen Blockschaldbild (oder einer gegebenen Funktion) das Zeigerdiagramm erstellt 
+  werden, werden die \textbf{Beträge} der Elemente \textbf{multipliziert} und
+  die \textbf{Winkel} ($arg()$) \textbf{addiert}. Die Werte für die einzelnen Elemente sind der Tabelle in Kap 1.1 LTI-  
   Grundglieder zu entnehmen. 
 
 \begin{multicols}{2}
@@ -57,5 +57,7 @@
     \item Korrektur berechnen
     \item Korrektur am Prozess über die Stelleinrichtung vornehmen (DA-Wandlung)
   \end{itemize}
+
+\input{sections/Umformungen.tex}
 
 \input{sections/BodeApproximation}	
