ganz kleiner Fehler enddeckt…

--- a/sections/GegenkopplungStabilitaet.tex
+++ b/sections/GegenkopplungStabilitaet.tex
@@ -96,7 +96,7 @@
 	        		$y=K \left[1-\frac{1}{\sqrt{1-\zeta^2}}e^{-\zeta\omega_n t}\sin
                		\left( \sqrt{1-\zeta^2} \omega_n t+arcos(\zeta) \right)\right]$
                	} \\
-               	$G(j \omega)= \frac{K}{1+ 2 \zeta (j\omega) T  + (j \omega T)^2 + }$ & $\left| G \right| = \frac{K}{\sqrt{\left[1+(j\omega
+               	$G(j \omega)= \frac{K}{1+ 2 \zeta (j\omega) T  + (j \omega T)^2}$ & $\left| G \right| = \frac{K}{\sqrt{\left[1+(j\omega
                	T)^2\right]^2+\left[2\zeta \omega T \right]^2}}$ & \\
                	$\arg G=-\arctan  \frac{2\zeta \omega T}{1+(j\omega T)^2}$ & $0 \leq\omega T \leq 1$ & \\
                	$\arg G=\arctan \frac{2\zeta \omega T}{1+(j \omega T)^2}-\pi$ & $1 \leq\omega T \leq \infty$ & \\
