--- a/tikz/SystemParallel.tex
+++ b/tikz/SystemParallel.tex
@@ -5,7 +5,7 @@
   \node (G1) at (2.5,1.5) [draw]{$G_1(s)$};
   \node (G2) at (2.5,0.5) [draw]{$G_2(s)$};
 
-  \node (sum) at (4,1) [circle,draw]{+};
+  \node (sum) at (4,1) [circle,draw, inner sep=1]{+};
   \node (out) at (5,1) []{y};
 
 
