Kleine Unschönheiten und Fehler im ganzen Dokument korrigiert/verbessert

--- a/sections/GegenkopplungStabilitaet.tex
+++ b/sections/GegenkopplungStabilitaet.tex
@@ -218,6 +218,7 @@
         
         \textbf{Zwei I-Glieder gegengekoppelt \formelbuch{115}}\\
         	\fbox{$\omega_\pi = \sqrt{K}$}
+        	bei $\ddot{y} + K \cdot y = 0$
 	\end{multicols}
 	Zur Instabilität führt das Zusammenwirken von Verstärkung und Signalverzögerung. Dabei ist die Reihenfolge der Glieder beliebig. Entscheiden sind gesamte Verstärkung $=$ Kreisverstärkung und gesamte Verzögerung $=$ Kreisverzögerung im offenen Regelkreis.
 
