--- a/sections/PidRegler.tex
+++ b/sections/PidRegler.tex
@@ -28,8 +28,15 @@
         $T_\omega = 2T_m=\dfrac{2\pi}{\omega_n \sqrt{1-\zeta^2}}=\dfrac{2\pi}{\omega}$ & &
         $T_{\omega}$: & Schwingungsdauer \\
       \cline{1-1}
-      	$\varepsilon = \frac{\Delta y}{y_{\infty}}$ & &
-      	$\varepsilon$: & Verhältnis von Überschwinger nach $T_e$ zum Endwert\\
+      	$\varepsilon = \dfrac{\Delta y}{y_{\infty}}$ & &
+      	\parbox{0.5cm}{
+      		$\varepsilon$:\\
+      		$\Delta y$:
+      	} & 
+      	\parbox{8cm}{
+      		Verhältnis von Überschwinger nach $T_e$ zum Endwert\\
+      		Toleranzbereich der Amplitude nach $T_e$
+      	}\\
       \cline{1-1}  
         $T_e = \dfrac{\ln\left(\varepsilon\sqrt{1-\zeta^2}\right)}{-\omega_n\cdot\zeta} = 
         \dfrac{1}{\sigma}\ln\left(\dfrac{\varepsilon\omega}{\omega_n}\right)$ & &
@@ -52,9 +59,6 @@
       \cline{1-1}  
         $\sigma = -\dfrac{\zeta}{T} = -\zeta\omega_n$ & &
         $\zeta$: & Dämpfungskonstante \\
-      \cline{1-1}  
-        $\varepsilon =  \dfrac{\Delta y}{y_{\infty}}$ & &
-        $\Delta y$: & Toleranzbereich der Amplitude im eingeschwungenen Zustand \\
       \cline{1-1}
       	$\delta = \ln{\Big(\frac{y_i}{y_{i+1}}\Big)} = \frac{2\pi \zeta}{\sqrt{1-\zeta^2}}$ & &
         $\delta$: & Logarithmisches Dekrement\\
